--- a/gemfile
+++ b/gemfile
@@ -1,10 +1,12 @@
 source "https://rubygems.org"
 
-ruby '3.0.2'
+ruby '3.0.0'
+
 
 gem 'sinatra'
 gem 'sinatra-base'
 gem 'sinatra-contrib'
+gem 'sinatra-reloader'
 gem 'webrick'
 gem 'selenium-webdriver'
 gem 'pg'
